crates/swc_css_parser/tests/errors/custom-properties/exclamation/output.stderr
error: Expected Ident
 --> $DIR/tests/errors/custom-properties/exclamation/input.css:1:16
  |
1 | .class {--foo:!; }
  |                ^

